--- a/ExercisesASPNET/Ciqual/Views/Shared/_Layout.cshtml
+++ b/ExercisesASPNET/Ciqual/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Familles" asp-action="Index">Familles</a></li>
                     <li><a asp-area="" asp-controller="Constituants" asp-action="Index">Constituants</a></li>
                     <li><a asp-area="" asp-controller="Aliments" asp-action="Index">Aliments</a></li>
+                    <li><a asp-area="" asp-controller="Aliments" asp-action="ListByFirstLetter">AlimentsbyAlphabet</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
