--- a/ExercisesASPNET/Ciqual/Views/Aliments/Index.cshtml
+++ b/ExercisesASPNET/Ciqual/Views/Aliments/Index.cshtml
@@ -27,7 +27,7 @@
                 @Html.DisplayNameFor(model => model.Aliments[0].Nom)
             </th>
             <th>
-                
+                @Html.DisplayNameFor(model => model.Aliments[0].Composition.Count)
                 @Html.DisplayNameFor(model => model.Aliments[0].NbConstituants)
             </th>
             <th></th>
